<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">MobileReader</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Search -->
    <string name="os__base_search_hint">Nhập từ khoá&#8230;</string>


    <!-- Navigation Data -->
    <string name="mr__mn_home">Trang chủ</string>
    <string name="mr__mn_my_book">Sách của tôi</string>
    <string name="mr__mn_book_cate">Danh mục sách</string>
    <string name="mr__mn_settings">Cài đặt</string>
    <string name="mr__mn_rating_app">Bình chọn</string>
    <string name="mr__mn_guide">Hướng dẫn</string>
    <string name="mr__mn_about">Giới thiệu</string>

    <!-- Login layout -->
    <string name="mr__tv_login_type">Vui lòng chọn hình thức đăng nhập</string>


    <!-- User info -->
    <string name="mr__ui_coin">Xu:</string>


    <!-- Button name -->
    <string name="mr__btn_login">Đăng nhập</string>
    <string name="mr__btn_logout">Đăng xuất</string>

   <!-- Message -->
    <string name="mr__mess_double_click_exit">Bấm nút back thêm lần nữa để thoát.</string>


    <!-- social-->
    <string name="attachment_much_long">Attachment is much long, max size is 12mb</string>
    <string name="need_facebook_app">You need native facebook app to perform this action</string>
    <!-- end social-->

    <!-- fragment about-->
    <string name="dialog_txt_about_us_title">Giới thiệu</string>
    <string name="dialog_txt_about_us_content">Ứng dụng Mobile Reader được phát triển bởi nhóm Orange Studio
    \nCảm ơn bạn đã sử dụng ứng dụng.
    \n\n\n@Copy right 2014-2015</string>
    <string name="dialog_txt_rating_title">Xếp hạng ứng dụng</string>
    <string name="dialog_txt_rating_content">Hãy khích lệ chúng tôi bằng cách vote 5(*) để chúng tôi tiếp tục mang đến cho các bạn những trải nghiệm tuyệt vời nhất.\n\nChân thành cảm ơn.</string>

    <!-- end fragment about-->

    <!-- common text-->
    <string name="common_txt_login">Đăng nhập</string>
    <string name="common_txt_register">Đăng ký</string>
    <string name="common_txt_username">Tên đăng nhập</string>
    <string name="common_txt_username_hint">Nhập tên đăng nhập</string>
    <string name="common_txt_password">Mật khẩu</string>
    <string name="common_txt_password_hint">Nhập mật khẩu</string>
    <string name="common_txt_forgot_password">Quên mật khẩu?</string>
    <string name="common_txt_register_now">Đăng ký ngay</string>
    <string name="common_txt_confirm_password">Xác nhận mật khẩu</string>
    <string name="common_txt_confirm_password_hint">Nhập lại xác nhận mật khẩu</string>
    <string name="common_txt_user_email">Email</string>
    <string name="common_txt_user_email_hint">Nhập địa chỉ email của bạn</string>

    <string name="common_txt_btn_rating">Xếp hạng</string>
    <string name="common_txt_rating">Xếp hạng ứng dụng</string>
    <string name="common_txt_server_error_default">Server is under maintenance, please come back later!!!</string>
    <string name="common_txt_btn_login">Đăng nhập</string>
    <string name="common_txt_btn_retry">Thử lại</string>
    <string name="common_txt_btn_next">Tiếp</string>
    <string name="common_txt_btn_back">Quay lại</string>
    <string name="common_txt_btn_ok">Ok</string>
    <string name="common_txt_btn_close">Đóng</string>
    <string name="common_txt_btn_cancel">Hủy</string>
    <string name="common_txt_version_name">Phiên bản</string>
    <string name="common_txt_expire_date">Expire date:</string>
    <string name="common_txt_question">\?</string>
    <string name="common_txt_money_uint">VND</string>
    <string name="common_txt_search_book_center">Search book center...</string>

    <string name="common_msg_invalid_username">user name invalid</string>
    <string name="common_msg_invalid_email">email invalid</string>
    <string name="common_msg_invalid_passowd">passwod invalid</string>
    <string name="common_msg_confirm_passowd_not_match">Confirm password not match..</string>
    <string name="common_msg_please_login">Please, login...</string>
    <string name="common_search_hint"><i>Book name or author...</i></string>

    <!-- end common text-->

</resources>
